syntax = "proto3";
package gameMessageCore;
option go_package = "./messageGo/proto";


message VectorXY {
  int32 x = 1;
  int32 y = 2;
}

message Vector3 {
  float x = 1;
  float y = 2;
  float z = 3;
}
 